# The-Thiele-Machine

./: .Makefile.coq.d  .coverage  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .inquisitor.json  .lia.cache  .nia.cache  .nra.cache  .vscodeignore  .zenodo.json  100_PERCENT_COMPLETE.md  ADMIT_REPORT.txt  ADVERSARIAL_FALSIFICATION_REPORT.md  ADVERSARIAL_RESULTS.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AND_ALGORITHMS.md  ARTIFACT_REPORT.md  ASSUMPTION_STACK.md  AUDIT_AND_FALSIFICATION_ATTEMPT.md  AUDIT_CONCLUSION_20251107.md  AUDIT_REPORT.md  AUDIT_STATUS_20251107_UPDATED.md  AUDIT_SUMMARY_2025-12-10.md  AUTOTELIC_ENGINE_README.md  AXIOM_DISCHARGE_SESSION_2026-01-12.md  AXIOM_DISCHARGE_SUMMARY.md  BELL_INEQUALITY_RESULTS.md  BELL_INEQUALITY_VERIFIED_RESULTS.md  BELL_MILESTONES.md  BRIDGE_THEOREM_SKETCH.md  CATEGORICAL_EXTENSION_PLAN.md  CAUSALITY_CONSERVATION_WORKLOG.md  CHANGELOG.md  CITATION.cff  CI_VALIDATION.md  CLAIMS_VERIFICATION.md  (+389 more)
--help/: PROOF.txt  proofpack.tar
.atlas_state/: atlas_history.json
.githooks/: pre-commit
.github/: CI_ACCOUNTABILITY.md  FIX_SUMMARY.md  WORKFLOWS.md  copilot-instructions.md
ablation_full_pipeline/: step_receipts.json
ablation_no_mdl/: step_receipts.json
ablation_wrong_model/: step_receipts.json
archive/: SPECULATIVE_PHYSICS_MAPPING.md  TheShapeOfTruth.py  TheShapeofProofandTheThieleMachine.py  ThieleUniversal.v  master_log.csv  oracle.py  ouroboros.py  proof.py  thiele_auto_consistency.py  thiele_auto_solver.py  thiele_equation_solver.py.bak  thiele_final_calculus.py  thiele_output.txt
artifacts/: ATLAS.md  BEDROCK_ANALYSIS_FINAL_REPORT.md  BEDROCK_STRENGTHENING_AUDIT.md  BUS_EXTERNALIZATION_PROOF_PLAN.md  COMPREHENSIVE_BEDROCK_AUDIT.json  EXTENSION_PLAN.md  EmergentSchrodingerEquation.v  EmergentWaveEquation.v  HEURISTIC_TARGETING.md  IMPLEMENTATION_GUIDE.md  INQUISITOR_REPORT.md  ISOMORPHISM_CONNECTION_AUDIT.md  ISOMORPHISM_ROADMAP.md  ISOMORPHISM_VISUALS.md  MANIFEST.sha256  ONE_HOUR_DELIVERABLE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PROOF_FOUNDATION_AUDIT.md  audit_report.md  binary_reasoning.json  complete_component_isomorphism_report.json  complete_isomorphism_verification.json  coq_admits.txt  coq_audit.json  coq_ocaml_python_mapping.json  coq_proof_stats.txt  cosmic_witness_prediction_proof.smt2  cosmic_witness_prediction_proof.txt  cosmic_witness_prediction_proof_robust.smt2  cosmic_witness_prediction_proof_robust.txt  cosmic_witness_prediction_receipt.json  cpu_decoder_validation.json  cross_layer_equivalence_scope.json  cross_platform_isomorphism_results.json  cross_reference_analysis.json  deep_audit_report.json  definitive_mapping.json  demo_discovery_receipt.json  dependency_manifest_certificate.json  discovery_partition_certificate.txt  (+78 more)
artifacts_planck/: cosmic_witness_prediction_receipt.json
attestations/: SBOM.md
audit_logs/: README.md
bell_locality_analysis/: mu_ledger.json  step_receipts.json
benchmarks/: README_GENERATED_FILES.md  csp_benchmark.py  graph_partitioning.py  partition_acceleration_benchmark.py  sat_results_large.csv
bootstrap_receipts/: 050_kernel_emit.json
catnet/: __init__.py  catnet.py  demo_mnist.py
certificates/: global_hash_chain.json
checksums/: receipts_sha256.txt
config/: pyproject.toml  requirements_fixed.txt
configs/: baseline_chsh.json  chsh_3x3_sweep.json  data_manifest.json  nl_search_chsh_seed1337.json
coq/: .CoqMakefile.d  .Makefile.conf.d  .Makefile.coq.d  .Makefile.d  .Makefile.temp.d  .Makefile.test.d  .gitignore  .lia.cache  .nia.cache  .nra.cache  ADMITTED_LEMMAS_ANALYSIS.md  ADMITTED_REPORT.md  ADMIT_REPORT.txt  ADMIT_SCAN_OUTPUT.txt  ADMIT_TODO.md  AGENTS.md  AXIOM_DISCHARGE_TRACKER.md  AXIOM_INVENTORY.md  AssumptionsProbe.glob  AssumptionsProbe.v  AssumptionsProbe.vo  AssumptionsProbeAll.glob  AssumptionsProbeAll.v  AssumptionsProbeAll.vo  Confluence.v  (+126 more)
zk/host/: Cargo.toml
(+6536 files in other folders)
