[package]
name = "thiele-zk-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-prove"
path = "src/main.rs"

[[bin]]
name = "zk-verify"
path = "src/verify.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
chrono = "0.4"

# Note: In production, use risc0-zkvm or sp1-sdk
# This is a placeholder for the ZK host/prover structure
